--- a/src/jupyrest/tests/notebooks/error.ipynb
+++ b/src/jupyrest/tests/notebooks/error.ipynb
@@ -1,5 +1,27 @@
 {
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import asyncio\n",
+    "await asyncio.sleep(30)\n",
+    "raise Exception(\"here is an exception\")"
+   ]
+  }
+ ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3.7.9 64-bit ('.venv': venv)",
+   "metadata": {
+    "interpreter": {
+     "hash": "a708b0063305b1a0371e06883581be78f0942506af7d5c9c88057c24472325e0"
+    }
+   },
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -12,28 +34,8 @@
    "pygments_lexer": "ipython3",
    "version": "3.7.9-final"
   },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.7.9 64-bit ('.venv': venv)",
-   "metadata": {
-    "interpreter": {
-     "hash": "a708b0063305b1a0371e06883581be78f0942506af7d5c9c88057c24472325e0"
-    }
-   }
-  }
+  "orig_nbformat": 2
  },
  "nbformat": 4,
- "nbformat_minor": 2,
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "raise Exception(\"here is an exception\")"
-   ]
-  }
- ]
+ "nbformat_minor": 2
 }
