--- a/src/jupyrest_example/Demo.ipynb
+++ b/src/jupyrest_example/Demo.ipynb
@@ -5,18 +5,17 @@
    "id": "1cda3fc9",
    "metadata": {},
    "source": [
-    "# Jupyrest\n",
+    "# Getting Started\n",
     "\n",
     "\n",
     "Jupyrest is a library that converts __Jupyter Notebooks__ into __REST APIs__. It turns notebooks into *notebook functions*.\n",
     "\n",
     "This guide will demonstrate how to interact with a notebook function and other nice features that Jupyrest provides.\n",
     "\n",
-    "## Getting Started\n",
+    "## Prerequisites:\n",
     "\n",
-    "Prerequisites:\n",
-    "- [git](https://git-scm.com/downloads)\n",
-    "- Python 3.9\n",
+    "- [Git](https://git-scm.com/downloads)\n",
+    "- Python 3.9 or later\n",
     "  - [Mac](https://www.python.org/downloads/macos/)\n",
     "  - [Windows (Windows Store version recommended)](https://apps.microsoft.com/detail/9p7qfqmjrfp7?hl=en-us&gl=US)\n",
     "  - [Linux](https://docs.python-guide.org/starting/install3/linux/)\n",
@@ -47,10 +46,10 @@
    "source": [
     "## Starting the Web Server\n",
     "\n",
-    "Run:\n",
+    "Run a Jupyrest HTTP server on port 5051:\n",
     "\n",
-    "```\n",
-    "python start_http.py\n",
+    "```bash\n",
+    "python start_http.py 5051\n",
     "```\n",
     "\n",
     "## Initializing a Jupyrest Client\n",
@@ -61,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f4a2fd1",
+   "id": "99b950da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,12 +71,33 @@
     "\n",
     "# initialize our client\n",
     "base_url = \"http://localhost:5051\"\n",
-    "client = JupyrestClient(endpoint=base_url)\n",
+    "client = JupyrestClient(endpoint=base_url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1fd4b00",
+   "metadata": {},
+   "source": [
+    "Below are some helper functions to better visualize the responses from the `JupyrestClient`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f4a2fd1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import HTML\n",
+    "import json\n",
+    "from fastapi.encoders import jsonable_encoder\n",
     "\n",
     "# Some helper functions to aid with displaying data\n",
     "# in this notebook.\n",
+    "\n",
     "def print_json(data):\n",
-    "    print(json.dumps(data, indent=4))\n",
+    "    print(json.dumps(jsonable_encoder(data), indent=4))\n",
     "\n",
     "def display_response(response):\n",
     "    html_out = f\"\"\"\n",
@@ -179,7 +199,7 @@
     "response = await client.execute_notebook_until_complete(\n",
     "    notebook_id=\"hello_world\",\n",
     "    parameters={\n",
-    "        \"name\": \"PyCascades\"\n",
+    "        \"name\": \"PyCon 2024\"\n",
     "    }\n",
     ")"
    ]
@@ -191,7 +211,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from fastapi.encoders import jsonable_encoder\n",
     "print_json(jsonable_encoder(response))"
    ]
   },
